# cube_simulator

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cube.rs  hello_plugin.rs  main.rs  main_menu.rs
